--- a/docs/layouts/A7_1_sheet_8_page_zine.html
+++ b/docs/layouts/A7_1_sheet_8_page_zine.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" media="print" href="../css/print_A7_1_sheet_8_page_zine.css" />
     </head>
     <body>
-        <img src="../pages/page4.svg" alt="page 4"><!--
-        --><img src="../pages/page3.svg" alt="page 3"><!--
-        --><img src="../pages/page2.svg" alt="page 2"><!--
-        --><img src="../pages/page1.svg" alt="page 1"><!--
+        <img class="upside-down" src="../pages/page4.svg" alt="page 4"><!--
+        --><img class="upside-down" src="../pages/page3.svg" alt="page 3"><!--
+        --><img class="upside-down" src="../pages/page2.svg" alt="page 2"><!--
+        --><img class="upside-down" src="../pages/page1.svg" alt="page 1"><!--
         --><img src="../pages/page5.svg" alt="page 5"><!--
         --><img src="../pages/page6.svg" alt="page 6"><!--
         --><img src="../pages/page7.svg" alt="page 7"><!--
